--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <h1> Kodus! to you guys you just leared git </h1>
 <h2>hello world</h2>
-  <h3>hello again!</h3>
+  <h3>hello again! Keep it up</h3>
 </body>
 </html>
 
